--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ a {
 }
 
 input {
-    background-color: #13131e;
+    background-image: wallpaper/wallhaven-1p398w_1920x1080.png;
     font: 16px 'Ubuntu Mono', monospace;
     color: #a9b1d6;
     height: 100%;
