--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 
 html,body {
-    font-family: 'Ubuntu Mono', monospace;
+    font-family: 'Source Code Pro', monospace;
     font-size: 16px;
     background: #181825;
     position: absolute;
