--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 
 
 html,body {
-    font-family: 'Source Code Pro', monospace;
+    font-family: Source Code Pro , monospace;
     font-size: 16px;
-    background: #181825;
+    background-image: wallpaper/wallhaven-1p398w_1920x1080.png;
     position: absolute;
     top: 50%;
     left: 50%;
