--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 html,body {
     font-family: Source Code Pro , monospace;
     font-size: 16px;
-    background-image: wallpaper/wallhaven-1p398w_1920x1080.png;
+    background-color: #181825;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -82,7 +82,7 @@ a {
 }
 
 input {
-    background-image: wallpaper/wallhaven-1p398w_1920x1080.png;
+    background-color: #13131e;
     font: 16px 'Ubuntu Mono', monospace;
     color: #a9b1d6;
     height: 100%;
